vistas de inicio de sesion y fragmento de base de datos

--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -13,10 +13,17 @@
         android:theme="@style/Theme.App"
         tools:targetApi="31">
         <activity
+            android:name=".welcome_views.ForgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".welcome_views.SignUp"
+            android:exported="false" />
+        <activity
             android:name=".Welcome"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,8 +31,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.App.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.App.NoActionBar" />
     </application>
 
 </manifest>
